--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "fusee-launcher"]
 	path = fusee-launcher
-	url = https://github.com/reswitched/fusee-launcher
+	url = https://github.com/reswitched/fusee-launcher.git
+	branch = master
